--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "de.ecomeal.ecomeal"
+        applicationId "de.ecomeal"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -16,6 +17,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    //Add the following block
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
     }
 }
 dependencies {
@@ -36,4 +44,6 @@ dependencies {
     compile 'com.mikepenz:devicon-typeface:2.0.0.1@aar'
     compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
     compile 'com.mikepenz:ionicons-typeface:2.0.1.1@aar'
+    compile 'com.firebase:firebase-client-android:2.4.0'
+
 }
