--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -18,32 +17,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    //Add the following block
-    packagingOptions {
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE-FIREBASE.txt'
-        exclude 'META-INF/NOTICE'
-    }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-storage:9.0.0'
+    compile 'com.google.firebase:firebase-database:9.0.0'
+
+    compile 'com.firebaseui:firebase-ui-database:0.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.mikepenz:iconics-core:2.5.11@aar"
     compile('com.mikepenz:materialdrawer:5.2.6@aar') {
         transitive = true
     }
-    compile 'com.mikepenz:google-material-typeface:2.2.0.1.original@aar'
-    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
-    compile 'com.mikepenz:fontawesome-typeface:4.6.0.1@aar'
-    compile 'com.mikepenz:octicons-typeface:3.2.0.1@aar'
-    compile 'com.mikepenz:meteocons-typeface:1.1.0.1@aar'
-    compile 'com.mikepenz:community-material-typeface:1.5.54.1@aar'
-    compile 'com.mikepenz:entypo-typeface:1.0.0.1@aar'
-    compile 'com.mikepenz:devicon-typeface:2.0.0.1@aar'
-    compile 'com.mikepenz:foundation-icons-typeface:3.0.0.1@aar'
-    compile 'com.mikepenz:ionicons-typeface:2.0.1.1@aar'
-    compile 'com.firebase:firebase-client-android:2.4.0'
-
 }
+
+apply plugin: 'com.google.gms.google-services'
