--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.firebase:firebase-core:9.0.0'
     compile 'com.google.firebase:firebase-storage:9.0.0'
     compile 'com.google.firebase:firebase-database:9.0.0'
-
+    compile 'com.google.android.gms:play-services-maps:9.0.0'
     compile 'com.firebaseui:firebase-ui-database:0.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.mikepenz:iconics-core:2.5.11@aar"
